UI: Correct loader animation positioning on small resolutions (#300)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -400,6 +400,10 @@ a.command:hover {
         display: inline;
         min-width: 48px;
     }
+    
+    .loader {
+      top: 7px;
+    }
 
     #commands a {
         padding: .4em;
